crates/ruff_python_parser/tests/snapshots/invalid_syntax@starred_starred_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/starred_starred_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..26,
        body: Suite {
            range: 0..26,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..12,
                        value: Call(
                            ExprCall {
                                node_index: NodeIndex(None),
                                range: 0..12,
                                func: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..5,
                                        id: Name("print"),
                                        ctx: Load,
                                    },
                                ),
                                arguments: Arguments {
                                    range: 5..12,
                                    node_index: NodeIndex(None),
                                    args: [
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 6..11,
                                                value: Starred(
                                                    ExprStarred {
                                                        node_index: NodeIndex(None),
                                                        range: 8..11,
                                                        value: List(
                                                            ExprList {
                                                                node_index: NodeIndex(None),
                                                                range: 9..11,
                                                                elts: [],
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                },
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 13..25,
                        value: Call(
                            ExprCall {
                                node_index: NodeIndex(None),
                                range: 13..25,
                                func: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 13..18,
                                        id: Name("print"),
                                        ctx: Load,
                                    },
                                ),
                                arguments: Arguments {
                                    range: 18..25,
                                    node_index: NodeIndex(None),
                                    args: [
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 19..24,
                                                value: Starred(
                                                    ExprStarred {
                                                        node_index: NodeIndex(None),
                                                        range: 21..24,
                                                        value: List(
                                                            ExprList {
                                                                node_index: NodeIndex(None),
                                                                range: 22..24,
                                                                elts: [],
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                },
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | print(*
2 | *[])
  | ^^^ Syntax Error: Starred expression cannot be used here
3 | print(* *[])
  |


  |
1 | print(*
2 | *[])
3 | print(* *[])
  |         ^^^ Syntax Error: Starred expression cannot be used here
  |
